--- a/src/App.css
+++ b/src/App.css
@@ -2,25 +2,9 @@
   height: 40vmin;
   pointer-events: none;
 }
-/*#gate {*/
-/*  cursor: pointer;*/
-/*  margin-bottom: 100px;*/
-/*  width: 83px;*/
-/*  height: 46px;*/
-/*}*/
 
-#ball {
+#block {
   width: 40px;
   height: 40px;
   cursor: grab;
 }
-/*.container {*/
-/*  position: absolute;*/
-/*  border: 1px solid brown;*/
-/*  margin: 10px;*/
-/*  width: 300px;*/
-/*  height: 300px;*/
-/*  cursor: grab;*/
-/*  padding: 5px;*/
-/*}*/
-
