--- a/src/App.css
+++ b/src/App.css
@@ -3,8 +3,12 @@
   pointer-events: none;
 }
 
-#block {
-  width: 40px;
-  height: 40px;
+#okno {
+  position: absolute;
+  width: 400px;
+  height: 400px;
   cursor: grab;
+  z-index: 1000;
+  background-color: burlywood;
+  border: 2px;
 }
