--- a/useEffect/App.css
+++ b/useEffect/App.css
@@ -13,27 +13,15 @@
   border: 2px;
 }
 html{
-  background-color: #00425a;
+  background-color: #004f5a;
   color: aquamarine;
 }
 
 button{
   background-color: #003138;
   color: aquamarine;
-  border: solid cadetblue 1px;
-  border-radius: 6px;
-  margin: 4px;
-  padding: 5px;
-}
-ul{
-  border: solid cadetblue 1px;
-  width: 200px;
-  height: 200px;
-  overflow:scroll;
-  overflow-x:hidden;
+  border: solid aquamarine 1px;
   border-radius: 6px;
   margin: 3px;
   padding: 5px;
-  position: relative;
-  background-color: #002c33;
 }
