--- a/managOkon/App.css
+++ b/managOkon/App.css
@@ -21,11 +21,11 @@ button{
 }
 
 .okno{
-  position: absolute;
-  z-index: 1000;
+  position: relative;
   width: 100px;
   height: 100px;
   cursor: grab;
+  z-index: 1000;
   background-color: burlywood;
   display: flex;
   text-align: center;
